5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1679_1880.log
== SUBMITION (2019-04-30 17:31:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
print("Nao é triangulo")

-- EXECUTION TIME:
0.172538
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1880/main.py", line 2, in <module>
    print("Nao \xe9 triangulo")
UnicodeEncodeError: 'ascii' codec can't encode character '\xe9' in position 4: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 12:30:22) 
-- CODE:
mes=int(input('Digite o numero do mes'))

if mes >12 or mes <1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes=6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8)
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes=10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- EXECUTION TIME:
0.210287
-- ERROR:
  File "/home/codebench/codes/1679/1880/main.py", line 3
    if mes >12 or mes <1):
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:30:36) 
-- CODE:
mes=int(input('Digite o numero do mes'))

if mes >12 or mes <1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes=6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8)
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes=10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- ERROR:
File "XXXX", line 3
    if mes >12 or mes <1):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:30:45) 
-- CODE:
mes=int(input('Digite o numero do mes'))

if (mes >12 or mes <1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes=6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8)
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes=10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- ERROR:
File "XXXX", line 15
    elif (mes=6):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:30:49) 
-- CODE:
mes=int(input('Digite o numero do mes'))

if (mes >12 or mes <1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes=6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8)
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes=10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- ERROR:
File "XXXX", line 15
    elif (mes=6):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:31:24) 
-- CODE:
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes=6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8)
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes=10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- ERROR:
File "XXXX", line 14
    elif (mes=6):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:31:49) 
-- CODE:
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8)
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes=10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- ERROR:
File "XXXX", line 18
    elif (mes==8)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:32:03) 
-- CODE:
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes=10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- ERROR:
File "XXXX", line 22
    elif (mes=10):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:32:15) 
-- CODE:
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- ERROR:
File "XXXX", line 22
    elif (mes==):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:32:24) 
-- CODE:
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:32:29) 
-- CODE:
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:32:33) 
-- CODE:
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 12:32:37) 
-- CODE:
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- EXECUTION TIME:
0.129543
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
